feat(core): Configure the `OrtServerAuthenticator`
Add a new Ktor plugin that installs the `OrtServerAuthenticator`.

The authenticator is required in case the `GitConfigFileProvider` is
used with a private repository.

Signed-off-by: Martin Nonnenmacher <martin.nonnenmacher@doubleopen.io>